--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,17 +2,20 @@ workflows:
   android-shofyou-lite:
     name: Shofyou Lite Professional Build
     max_build_duration: 60
-    instance_type: mac_mini_m1
+    instance_type: mac_mini_m2
     environment:
       groups:
-        - production # هذا الاسم الذي وضعناه في Codemagic
+        - production # المجموعه التي أضفت فيها المتغيرات الثلاثة
       node: latest
     scripts:
       - name: Install dependencies
         script: npm install
       - name: Generate Keystore (Automatic)
         script: |
-          # هذا السكريبت سيقوم بإنشاء ملف التوقيع باستخدام البيانات التي أدخلتها يدوياً
+          # حل مشكلة FileNotFoundException بإنشاء المجلد أولاً
+          mkdir -p android/app
+          
+          # إنشاء ملف التوقيع باستخدام بياناتك
           keytool -genkeypair \
             -v -keystore android/app/shofyou.keystore \
             -alias $CM_KEY_ALIAS \
@@ -35,4 +38,4 @@ workflows:
     publishing:
       email:
         recipients:
-          - YOUR_EMAIL@GMAIL.COM # لا تنسى تغيير هذا الإيميل لتصلك الروابط
+          - YOUR_EMAIL@GMAIL.COM # ضع إيميلك هنا لتصلك الروابط
